--- a/deskover-ecommerce-website/src/main/resources/templates/cart.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/cart.html
@@ -64,8 +64,8 @@
                             <p class="mt-50 sub-heading-h2">Bạn chưa thêm sản phẩm nào vào giỏ hàng</p>
                         </div>
                     </div>
-                    <button class="btn btn-outline-accent d-block w-100 mt-4" type="button" ng-click="cart.removeAll()">
-                        <i class="ci-remove fs-base me-2"></i>Xóa tất cả
+                    <button class="btn btn-outline-danger d-block w-100 mt-4" type="button" ng-click="cart.removeAll()" ng-if="cart.total > 0">
+                        <i class="ci-trash me-2"></i>Xóa tất cả
                     </button>
                 </section>
                 <!-- Sidebar-->
