fix error console

--- a/deskover-ecommerce-website/src/main/resources/templates/invoice.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/invoice.html
@@ -108,6 +108,7 @@
             </div>
         </div>
     </div>
+    <a href="/send">sendmail</a>
     <button type="button" class="btn btn-default">Take a Screenshot!</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
     <script src="https://superal.github.io/canvas2image/canvas2image.js"></script>
